@@ -1,5 +1,11 @@
 2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Minor packaging fix.
+
+	* tools/lib/Makefile.am: Depend on `Makefile.am' not `Makefile'.
+
+2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Use the new version numbering mechanism for scripts.
 
 	* tools/bin/cce.in,
@@ -11,7 +17,7 @@
 
 	* tools/bin/Makefile.am: Make scripts and man pages depend on
 	`$(top_srcdir)/.version' so they are regenerated on version bumps.
-
+	
 2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Introduce automatic version numbering.
